--- a/run_spaun.py.cfg
+++ b/run_spaun.py.cfg
@@ -1,3 +1,10 @@
+_viz_0 = nengo_viz.components.PointerTemplate(model.ps)
+_viz_config[_viz_0].label_visible = 1
+_viz_config[_viz_0].width = 181.818
+_viz_config[_viz_0].y = 34.4916
+_viz_config[_viz_0].x = 663.96
+_viz_config[_viz_0].show_pairs = 0
+_viz_config[_viz_0].height = 181.818
 _viz_net_graph = nengo_viz.components.NetGraphTemplate()
 _viz_sim_control = nengo_viz.components.SimControlTemplate()
 _viz_config[_viz_sim_control].kept_time = 4
@@ -156,7 +163,7 @@ _viz_config[model.enc.pos_mb.mem2.mem].expanded=False
 _viz_config[model.enc.pos_mb.mem2.mem].has_layout=False
 _viz_config[model.enc.pos_mb.mem2.networks[2]].expanded=False
 _viz_config[model.enc.pos_mb.mem2.networks[2]].has_layout=False
-_viz_config[model.mem].pos=(0.7279456453150008, 0.05720633201641796)
+_viz_config[model.mem].pos=(0.7288067806012692, 0.06366003047055536)
 _viz_config[model.mem].size=(0.14076886386376603, 0.32698356124995326)
 _viz_config[model.mem].expanded=False
 _viz_config[model.mem].has_layout=True
@@ -338,14 +345,64 @@ _viz_config[model.mem.sel_mb2_in.ens0].expanded=False
 _viz_config[model.mem.sel_mb2_in.ens0].has_layout=False
 _viz_config[model.mem.sel_mb2_in.ens1].expanded=False
 _viz_config[model.mem.sel_mb2_in.ens1].has_layout=False
-_viz_config[model.mem.sel_mb3_in].pos=(0.23367593127638023, 0.6289858625438738)
+_viz_config[model.mem.sel_mb3_in].pos=(0.27401832796851033, 0.6746033036141549)
 _viz_config[model.mem.sel_mb3_in].size=(0.055248618784530384, 0.046059070829915665)
 _viz_config[model.mem.sel_mb3_in].expanded=False
-_viz_config[model.mem.sel_mb3_in].has_layout=False
+_viz_config[model.mem.sel_mb3_in].has_layout=True
+_viz_config[model.mem.sel_mb3_in.ens0].pos=(0.5486876736048194, 0.7522926351155002)
+_viz_config[model.mem.sel_mb3_in.ens0].size=(0.10989010989010989, 0.03679852805887764)
 _viz_config[model.mem.sel_mb3_in.ens0].expanded=False
 _viz_config[model.mem.sel_mb3_in.ens0].has_layout=False
-_viz_config[model.mem.sel_mb3_in.ens1].expanded=False
-_viz_config[model.mem.sel_mb3_in.ens1].has_layout=False
+_viz_config[model.mem.sel_mb3_in.ens1].pos=(0.5876363062893549, 0.3637802393587236)
+_viz_config[model.mem.sel_mb3_in.ens1].size=(0.10989010989010989, 0.26505427337899357)
+_viz_config[model.mem.sel_mb3_in.ens1].expanded=True
+_viz_config[model.mem.sel_mb3_in.ens1].has_layout=True
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[0]].pos=(0.49999999999999994, 0.8315789473684211)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[0]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[10]].pos=(0.49999999999999994, 0.7368421052631579)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[10]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[11]].pos=(0.49999999999999994, 0.8631578947368421)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[11]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[12]].pos=(0.49999999999999994, 0.9578947368421052)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[12]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[13]].pos=(0.49999999999999994, 0.13684210526315788)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[13]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[14]].pos=(0.49999999999999994, 0.23157894736842102)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[14]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[15]].pos=(0.49999999999999994, 0.2947368421052632)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[15]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[1]].pos=(0.49999999999999994, 0.4842105263157895)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[1]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[2]].pos=(0.49999999999999994, 0.8947368421052632)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[2]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[3]].pos=(0.49999999999999994, 0.8)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[3]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[4]].pos=(0.49999999999999994, 0.10526315789473685)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[4]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[5]].pos=(0.49999999999999994, 0.19999999999999998)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[5]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[6]].pos=(0.49999999999999994, 0.2631578947368421)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[6]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[7]].pos=(0.49999999999999994, 0.3894736842105263)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[7]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[8]].pos=(0.49999999999999994, 0.5157894736842106)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[8]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[9]].pos=(0.49999999999999994, 0.6105263157894737)
+_viz_config[model.mem.sel_mb3_in.ens1.ea_ensembles[9]].size=(0.09803921568627451, 0.005263157894736842)
+_viz_config[model.mem.sel_mb3_in.ens1.input].pos=(0.12745098039215685, 0.5)
+_viz_config[model.mem.sel_mb3_in.ens1.input].size=(0.07843137254901959, 0.004210526315789474)
+_viz_config[model.mem.sel_mb3_in.ens1.output].pos=(0.8885909462195072, 0.5364966789616238)
+_viz_config[model.mem.sel_mb3_in.ens1.output].size=(0.07843137254901959, 0.004210526315789474)
+_viz_config[model.mem.sel_mb3_in.nodes[0]].pos=(0.07142857142857142, 0.8712051517939283)
+_viz_config[model.mem.sel_mb3_in.nodes[0]].size=(0.04395604395604395, 0.007359705611775529)
+_viz_config[model.mem.sel_mb3_in.output].pos=(0.8875093442560462, 0.633197881863457)
+_viz_config[model.mem.sel_mb3_in.output].size=(0.04395604395604395, 0.007359705611775529)
+_viz_config[model.mem.sel_mb3_in.sel0].pos=(0.07142857142857142, 0.019319227230910764)
+_viz_config[model.mem.sel_mb3_in.sel0].size=(0.04395604395604395, 0.007359705611775529)
+_viz_config[model.mem.sel_mb3_in.sel1].pos=(0.07142857142857142, 0.954001839926403)
+_viz_config[model.mem.sel_mb3_in.sel1].size=(0.04395604395604395, 0.007359705611775529)
+_viz_config[model.mem.sel_mb3_in.sel_none].pos=(0.33516483516483514, 0.8712051517939283)
+_viz_config[model.mem.sel_mb3_in.sel_none].size=(0.054945054945054944, 0.00919963201471941)
 _viz_config[model.mtr].pos=(1.0552485589917415, 0.33271848449877706)
 _viz_config[model.mtr].size=(0.10416938655660361, 0.21789148012365955)
 _viz_config[model.mtr].expanded=False
@@ -445,7 +502,9 @@ _viz_config[model.ps.ps_task_mb.mem2.networks[2]].has_layout=False
 _viz_config[model.stim].pos=(-0.14659467305424487, 0.7231062489094988)
 _viz_config[model.stim].size=(0.03773584905660377, 0.017452006980802792)
 _viz_config[model.stim].expanded=False
-_viz_config[model.stim].has_layout=False
+_viz_config[model.stim].has_layout=True
+_viz_config[model.stim.output].pos=(0.5, 0.5)
+_viz_config[model.stim.output].size=(0.3076923076923077, 0.2222222222222222)
 _viz_config[model.thal].pos=(0.5023352089947195, 1.2546005196426748)
 _viz_config[model.thal].size=(0.0459505498256989, 0.10775790895674649)
 _viz_config[model.thal].expanded=False
@@ -528,8 +587,8 @@ _viz_config[model.thal.networks[9]].pos=(0.8655913978494624, 0.7358247422680412)
 _viz_config[model.thal.networks[9]].size=(0.10752688172043011, 0.025773195876288655)
 _viz_config[model.thal.networks[9]].expanded=False
 _viz_config[model.thal.networks[9]].has_layout=False
-_viz_config[model.thal.spa].pos=(0.39464834747658023, 0.3220723818676822)
-_viz_config[model.thal.spa].size=(0.5644739300537795, 0.5644739300537795)
+_viz_config[model.thal.spa].pos=(0.24917130543234428, 0.2432249700743346)
+_viz_config[model.thal.spa].size=(1.610510000000014, 1.610510000000014)
 _viz_config[model.thal.spa].expanded=True
 _viz_config[model.thal.spa].has_layout=True
 _viz_config[model.trfm].pos=(0.6026018769438872, 0.8889343136916096)
@@ -638,7 +697,7 @@ _viz_config[model.vis.vis_mb.mem2.diff].expanded=False
 _viz_config[model.vis.vis_mb.mem2.diff].has_layout=False
 _viz_config[model.vis.vis_mb.mem2.mem].expanded=False
 _viz_config[model.vis.vis_mb.mem2.mem].has_layout=False
-_viz_config[model.vis.vis_net].pos=(0.08702366083431615, 0.7241185694809271)
+_viz_config[model.vis.vis_net].pos=(0.15604396790278607, 0.6461908598084029)
 _viz_config[model.vis.vis_net].size=(0.11478029879618697, 0.19460810698080253)
 _viz_config[model.vis.vis_net].expanded=False
 _viz_config[model.vis.vis_net].has_layout=False
